<resources>
    <string name="app_name">ShouShida</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pass_login">密码登录</string>
    <string name="sms_login">验证码登录</string>
    <string name="wangji_pass">忘记密码？</string>
    <string name="login">登录</string>
    <string name="determine">确定</string>
    <string name="register_student">注册为学生</string>
    <string name="getsms">获取验证码</string>
    <string name="on_next">下一步</string>
    <string name="name">姓名：</string>
    <string name="gender">性别：</string>

</resources>
